Fixed the issue of IE7/IE8 not showing question numbers

--- a/media/css/scss/section_questionnaire.scss
+++ b/media/css/scss/section_questionnaire.scss
@@ -166,13 +166,13 @@
                             font-size:16px;
                         }
                     }
-                    ol li{
+                    ol{
+                        list-style: decimal inside none;
+                        li{
                         margin-bottom:10px;
-                    }
-                    ol > div{
-                        padding:10px 50px 0 50px;
+                        padding:10px 10px 0 20px;
                         border-bottom:1px solid #B5B5B5;
-                        width:200px;
+                        width:270px;
                         cursor:pointer;
                         &.question_selected{
                             background:#d8e4ec url("/media/images/question_hover_bg.gif") repeat-x bottom left;
@@ -190,6 +190,7 @@
                             color:#000000;
                             font-size:16px;
                         }
+                    }
                     }
                     .delete a{
                         color:#0070AC;
